RESOLVED FIXED 99905
Baseline JIT should not inline array allocations, to make them easier to instrument
https://bugs.webkit.org/show_bug.cgi?id=99905
Summary Baseline JIT should not inline array allocations, to make them easier to inst...
Filip Pizlo
Reported 2012-10-19 21:42:35 PDT
That will allow array allocation type profiling.
Attachments
the patch (8.02 KB, patch)
2012-10-19 21:47 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2012-10-19 21:47:02 PDT
Created attachment 169753 [details] the patch
Mark Hahnenberg
Comment 2 2012-10-19 22:03:46 PDT
Comment on attachment 169753 [details] the patch r=me
Filip Pizlo
Comment 3 2012-10-19 22:09:42 PDT
Note You need to log in before you can comment on or make changes to this bug.